# vc-issuer

./: .gitignore  Cargo.toml  README.md
src/: key.rs  lib.rs
src/did/: content_type.rs  did_document.rs  didcomm_invitation.rs  jwe.rs  mod.rs
src/didcomm/: did_document.rs  mod.rs
src/oid4vc/: claims.rs  cred_offer.rs  mod.rs  oauth_grants.rs  pre_authorized_code.rs
src/routes/: didcomm.rs  mod.rs  oid4vc.rs
src/server/: mod.rs
src/services/: didcomm.rs  mod.rs  oid4vc.rs
