[package]
name = "vc-issuer"
version = "0.1.0"
edition = "2021"
description = "A simple VC issuer"
license = "MIT"
repository = "https://github.com/chriamue/vc-issuer"
readme = "README.md"
keywords = ["vc", "issuer", "verifiable-credentials"]
categories = ["web-programming", "security"]
authors = ["Christian M <chriamue@gmail.com>"]

[features]
default = ["server"]
server = [
    "dotenv",
    "ngrok",
    "tokio",
    "tower-http",
    "tracing",
    "tracing-subscriber",
]

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.5", features = ["json"] }
dotenv = { version = "0.15.0", optional = true }
ed25519-dalek = { version = "2.1", default-features = false }
hex = "0.4.3"
qrcode = "0.14.0"
sha2 = "0.9"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

tokio = { version = "1.37.0", features = [
    "rt-multi-thread",
    "macros",
], optional = true }
tower-http = { version = "0.5", features = ["trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
urlencoding = "2.1.3"
ngrok = { version = "0.13.1", optional = true }
base64 = "0.22.0"
bs58 = "0.5.1"
async-trait = "0.1.79"
didcomm-rs = { version = "0.7.2", git = "https://github.com/chriamue/didcomm-rs.git", branch = "feature/jwm-header" }
